ft/src/tui/tests/snapshots/graph_tab_input_mode_80x24.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
> e where path = ""; expand where edge.kind in {directory-contains, note-link}; 
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│▶   D /                                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph                not yet refreshed   modal: query-bar
