ft/src/tui/tests/snapshots/graph_tab_preset_picker_open.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
>                                                                               
 1: node where path = "…   2: (empty)                                           
┌ (empty) ─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│press / to edit┌ find ────────────────────────────────────────┐               │
│               │type to search…                               │               │
│               └──────────────────────────────────────────────┘               │
│               ┌ recent · type to search ─────────────────────┐               │
│               │▶ fs                                          │               │
│               │  ghosts                                      │               │
│               │  links                                       │               │
│               │  tasks-in-fs                                 │               │
│               │  tree                                        │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph            Enter:confirm  Esc:cancemodal: preset-pi
