ft/src/tui/tests/snapshots/graph_tab_search_picker_open.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
> node where path = ""; expand where edge.kind in {directory-contains, note-link
 1: node where path = "…                                                        
┌ node where path = "… ────────────────────────────────────────────────────────┐
│▶   D /                                                                       │
│press / to edit┌ find ────────────────────────────────────────┐               │
│               │type to search…                               │               │
│               └──────────────────────────────────────────────┘               │
│               ┌ recent · type to search ─────────────────────┐               │
│               │▶ /                                           │               │
│               │  Areas/  ·  /                                │               │
│               │  Projects/  ·  /                             │               │
│               │  root  ·  /                                  │               │
│               │  operations/  ·  /Areas                      │               │
│               │  finance  ·  /Areas                          │               │
│               │  alpha  ·  /Projects                         │               │
│               │  shifts  ·  /Areas/operations                │               │
│               └──────────────────────────────────────────────┘               │
│               Enter: jump · Esc: cancel                                      │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph            Enter:confirm  Esc:cance  modal: search
