ft/src/tui/tests/snapshots/graph_tab_strip_two_views_80x24.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
>                                                                               
 1: node where path = "…   2: (empty)                                           
┌ (empty) ─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph                not yet refreshed   modal: query-bar
