ft/src/tui/tests/snapshots/graph_tab_z_rooted_on_note.snap
---
source: ft/src/tui/tests/graph.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
> node where kind in {Directory} and path = "Areas"; expand where edge.kind in {
 1: node where kind in …                                                        
┌ node where kind in … ────────────────────────────────────────────────────────┐
│▶   D Areas/                                                                  │
│press / to edit query                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Graph                not yet refreshed      mode: normal
