ft/src/tui/tests/snapshots/help_overlay_graph_scrolled_down_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: down
---
  1 Graph ┌ help ────────────────────────────────────────────────────┐er  │  7 T
> node whe│  Tab            Switch to the next tab                  ║│ note-link
 1: node w│  BackTab        Switch to the previous tab              █│          
┌ node whe│  1..9           Switch to the tab at the given 0-based i█│─────────┐
│    D /  │                                                         █│         │
│press / t│  Views                                                  █│         │
│         │  Ctrl+n         Add a new view (pick preset or blank)   █│         │
│         │  Ctrl+p         Load a preset into the active view      ║│         │
│         │  Ctrl+w         Close the active view                   ║│         │
│         │  Ctrl+PageDown  Switch to the next view                 ║│         │
│         │  Ctrl+PageUp    Switch to the previous view             ║│         │
│         │  Alt+1..Alt+9   Switch to the view at the given 0-based ║│         │
│         │                                                         ║│         │
│         │  Notes                                                  ║│         │
│         │  Shift+r        Open the Related panel for the selected ║│         │
│         │  Shift+j        Open the Journal tab for the selected no║│         │
│         │  Ctrl+j         Append selected (or cursor) Note/Ghost r║│         │
│         │  o              Open the selected note in $EDITOR       ║│         │
│         │  Ctrl+o         Open the selected note in Obsidian      ║│         │
│         │  c              Create a new note (blank) in the selecte║│         │
│         │  Shift+c        Create a new note from a template       ║│         │
│         │  Shift+p        Promote the selected ghost into a synth ║│         │
└─────────└──────────────────────────────────────────────────────────┘─────────┘
 vault: test-vault  ·  tab: Graph           not yet refreshed        mode: help
