ft/src/tui/tests/snapshots/help_overlay_graph_scrolled_top_80x24.snap
---
source: ft/src/tui/tests/notes.rs
expression: top
---
  1 Graph ┌ help ────────────────────────────────────────────────────┐s  │  7 Ti
> node whe│Keybindings — Graph                                      █│ note-link
 1: node w│                                                         █│          
┌ node whe│  Global                                                 █│─────────┐
│    D /  │  q / Ctrl+c     Quit the TUI                            █│         │
│press / t│  ?              Open the keymap help overlay            █│         │
│         │  g              Enter the git-sync leader (then `s` to s║│         │
│         │  Tab            Switch to the next tab                  ║│         │
│         │  BackTab        Switch to the previous tab              ║│         │
│         │  1..9           Switch to the tab at the given 0-based i║│         │
│         │                                                         ║│         │
│         │  Views                                                  ║│         │
│         │  Ctrl+n         Add a new view (pick preset or blank)   ║│         │
│         │  Ctrl+p         Load a preset into the active view      ║│         │
│         │  Ctrl+w         Close the active view                   ║│         │
│         │  Ctrl+PageDown  Switch to the next view                 ║│         │
│         │  Ctrl+PageUp    Switch to the previous view             ║│         │
│         │  Alt+1..Alt+9   Switch to the view at the given 0-based ║│         │
│         │                                                         ║│         │
│         │  Notes                                                  ║│         │
│         │  Shift+r        Open the Related panel for the selected ║│         │
│         │  Shift+j        Open Search for the selected note or gho║│         │
└─────────└──────────────────────────────────────────────────────────┘─────────┘
 vault: test-vault  ·  tab: Graph           not yet refreshed        mode: help
