ft/src/tui/tests/snapshots/help_overlay_over_tasks_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
assertion_line: 525
expression: frame
---
  1 Graph ┌ help ────────────────────────────────────────────────────┐s  │  7 Ti
┌ query ──│Keybindings — Tasks                                       │─────────┐
│status in│                                                          │         │
└─────────│  Global                                                  │─────────┘
┌ tasks ──│  q / Ctrl+c  Quit the TUI                                │─────────┐
│ ── overd│  ?           Open the keymap help overlay                │         │
│▶   !!  P│  g           Enter the git-sync leader (then `s` to sync,│         │
│    !   R│  Tab         Switch to the next tab                      │         │
│ ── upcom│  BackTab     Switch to the previous tab                  │         │
│        R│  1..9        Switch to the tab at the given 0-based index│         │
│    !!  S│                                                          │ tomorrow│
│    v   B│  ↑/↓ or j/k scroll · PgUp/PgDn · g/G · ?/Esc/q close     │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
└─────────└──────────────────────────────────────────────────────────┘─────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]        mode: help
