ft/src/tui/tests/snapshots/history_split_layout_80x24.snap
---
source: ft/src/tui/tests/history.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Gather  │  7 T
┌ Recent (3 entries) ──────────────────────────────────────────────────────────┐
│    2026-05-09  Daily                                                         │
│    2026-05-09  Daily                                                         │
│▶   2026-05-09  Daily cited: Synth                                            │
│──────────────────────────────────────────────────────────────────────────────│
│Daily  ·  2026-05-09  ·  L5–5                                                 │
│    ↳ cited: Synth                                                            │
│──────────────────────────────────────────────────────────────────────────────│
│Fixed the parser bug today.                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: vault  ·  tab: Recent               not yet refreshed      mode: normal
